# infelens

./: .gitignore  README.md  emissions.csv  powermetrics_log.txt  pyproject.toml
data/: llm_models copy.json  llm_models.json  llm_models.local.json  sample_prompts.json  validation_llm_models.json
dstack/: .dstack.yml
etc/: available_nvidia_gpu_in_dstack.json  emissions.csv  nvidia_spec.json  result.json  result_without_price.json
output/: merged_benchmarks_20250531_124516.json  merged_benchmarks_20250531_125641.json  prompt_metrics.json  prompt_metrics_CPU.json  prompt_metrics_CPU_20250531_123524.json  prompt_metrics_CPU_20250531_124515.json  prompt_metrics_CPU_20250531_125640.json
src/: check_energy_consumption_script.py  run_and_upload_benchmarks.py  run_benchmarks.py  train.py  upload_benchmarks_to_hf.py
